# aviary

./: .gitignore  LICENSE  Makefile  README-Python.md  README.md  SPEC-DESK.md  SPEC.md  demo.ipynb  pyproject.toml
aviary_kernel/: __init__.py  __main__.py  abstraction.py  birds.py  environment.py  install.py  kernel.py  magics.py  parser.py  reduce.py  terms.py
aviary_kernel/kernelspec/: kernel.json
desk/: desk.bill
desk/app/: aviary.hoon
desk/lib/: aviary.hoon  shoe.hoon
desk/mar/: eval-command.hoon
desk/sur/: aviary.hoon
desk/tests/lib/: aviary.hoon
docs/: field-guide.html
tests/: conftest.py  fixtures_birds.py  test-engine-cases.hoon  test-engine.sh  test_abstraction.py  test_birds.py  test_hoon_registry.py  test_kernel.py  test_parser.py  test_reduce.py
