[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aviary-kernel"
version = "0.1.0"
description = "A Jupyter kernel for combinatory-logic (combinator calculus) evaluation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "ipykernel>=6.0",
    "jupyter_client>=7.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["aviary_kernel*"]

[tool.setuptools.package-data]
aviary_kernel = ["kernelspec/*.json"]
